Add endpoint for registering schemas managed on GitHub. Add some tests.